--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ h1{
 }
 .half-width{
     width: 50%;
+    padding-left: 2%;
+    
 }
 .half-width img{
     width: 65%;
@@ -36,4 +38,32 @@ h1{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow:10px 10px 30px gray;
+}
+#full-stack-experience{
+    border-left: 8px;
+    border-image: linear-gradient(red,green) ;
+    border-image-slice: 1;
+}
+
+#web-dev-experince{
+    border-left: 8px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+footer p {
+text-align: center;
+text-decoration: honeydew;
 }
